<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifspsaocarlos.sdm.gamescore.view.Atualizar_Remover_JogadorActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="300dp"
                android:layout_height="27dp"
                android:text="@string/nome_do_jogador"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="300dp"
                android:layout_height="27dp"
                android:text="@string/pontuacao"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_nome_jogador_atualiza"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/bt_cancelar_atualizacao"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/cancelar"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/bt_atualizar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:layout_marginLeft="65dp"
                android:layout_marginStart="42dp"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/atualizar"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:id="@+id/bt_remover_jogador"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/remover_jogador"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/et_pontuacao_jogador_atualiza"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/bt_menos_pontos"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/menos_icone"
                app:layout_constraintHorizontal_bias="0.576"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/et_pontuacao_jogador_atualiza"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/bt_mais_pontos"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/mais_icone"
                app:layout_constraintHorizontal_bias="0.423"
                app:layout_constraintLeft_toRightOf="@+id/et_pontuacao_jogador_atualiza"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/et_nome_jogador_atualiza"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_light"
                android:ems="10"

                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/et_pontuacao_jogador_atualiza"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
